--- a/fps/styles.css
+++ b/fps/styles.css
@@ -203,10 +203,14 @@ input:-webkit-autofill:active
 }
 /* note: add container padding */
 .container-right {
-    padding: 0px;
+    padding: 0px !important;
 }
 *:focus {
     outline: none;
+}
+nav.navbar {
+    padding-top: 20px !important;
+    padding-right: 0px !important;
 }
 .nav.navbar-nav.navbar-right {
     margin: 0px !important;
@@ -241,7 +245,7 @@ a.nav.navbar-nav{
 }
 
 #main {
-    padding: 30px !important;
+    padding: 30px 20px !important;
     margin-top: 10px;
     background-color: rgba(240, 240, 240) !important;
 }
