--- a/fps/styles.css
+++ b/fps/styles.css
@@ -158,7 +158,8 @@ i {
 }
 .breadcrumbsWrapper .help-text-button {
     margin-left: 20px !important;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
+    font-size: 20px !important;
 }
 .menuliparent a i{
     margin-top: 7px;
