--- a/fps/styles.css
+++ b/fps/styles.css
@@ -9,17 +9,11 @@ body {
 /* NOTE: Container */
 .container {
     background-color: white;
+    width: 1600px;
 }
 
-@media (min-width: 576px) {
-    .container, .container-sm {
-        max-width: 540px;
-    }
-}@media (min-width: 768px) {
-    .container, .container-md, .container-sm {
-        max-width: 720px;
-    }
-}@media (min-width: 992px) {
+
+@media (min-width: 992px) {
     .container, .container-lg, .container-md, .container-sm {
         max-width: 960px;
     }
