--- a/fps/styles.css
+++ b/fps/styles.css
@@ -309,11 +309,14 @@ a.nav.navbar-nav{
     border-radius: 50%;
     font-size: 24px !important;
 }
-.glyphicon.glyphicon-search,
 i.fa.fa-bell.fa-stack-1x {
     color: rgba(130, 130, 130, 1) !important;
     font-size: 20px !important;
     margin-top: 10px;
+}
+.glyphicon.glyphicon-search {
+    color: rgba(130, 130, 130, 1) !important;
+    font-size: 18px !important;
 }
 span.fa-stack.fa-2x:after {
     background: rgba(205, 0, 0, 1) !important;
