--- a/fps/styles.css
+++ b/fps/styles.css
@@ -187,6 +187,20 @@ button.btn.btn-default,
 .dashboardBlockFooter .more:hover {
     background-color: rgb(175, 173, 173);
 }
+
+input.form-control:focus{
+    outline-style: none;
+    box-shadow: none;
+    border-color: transparent;
+}
+
+div.input-group.input-lg{
+    width: 19% !important;
+}
+
+div.input-group.input-group-lg{
+    width: 57% !important;
+}
   
 .menuliparent .fa {
     margin-right: 20px;
@@ -483,10 +497,6 @@ i.fa.fa-bell.fa-stack-1x:hover  {
 .dashboardBlockItems li.haschild {
     /* background: none; */
 }
-input.form-control:focus{
-    outline-style: none;
-    box-shadow: none;
-    border-color: transparent;
-}
+
 /* Submodule page */
 
