--- a/fps/styles.css
+++ b/fps/styles.css
@@ -3,6 +3,7 @@ body {
     font-size: 14px;
     line-height: 150%;
     font-weight: 400;
+    color: rgba(0, 0, 0);
 }
 
 
@@ -495,3 +496,33 @@ input.form-control:focus{
 }
 /* Submodule page */
 
+/* NOTE: logo */
+#logofps {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+}
+#logofps .company {
+    margin-left: 10px;
+    margin-bottom: 0px;
+}
+.active #logofps .company {
+    display: none;
+}
+#logofps .company .name {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-weight: bold;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+}
+#logofps .company .slogan {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-family: 'Poppins', sans-serif;
+    word-spacing: 120%;
+    letter-spacing: 0px;
+}
