--- a/fps/styles.css
+++ b/fps/styles.css
@@ -104,7 +104,7 @@ li.list-group-item {
     border-radius: 12px;
 }
 .menuliparent ul {
-    padding-left: 25px !important;
+    padding-left: 20px !important;
 }
 .menuliparent a{
     display: flex;    
@@ -202,9 +202,10 @@ div.input-group.input-lg{
 div.input-group.input-group-lg{
     width: 57% !important;
 }
-  
+
 .menuliparent .fa {
-    margin-right: 20px;
+    margin-right: 15px;
+    width: 24px !important;
 }
 .breadcrumbsWrapper {
     margin-top: 20px;
