--- a/fps/styles.css
+++ b/fps/styles.css
@@ -134,6 +134,7 @@ li.list-group-item {
 }
 .menuliparent {
     margin-bottom: 20px !important;
+    min-height: 49px;
 }
 li.menuliparent{
     padding: 10px 20px 10px 20px;
@@ -520,6 +521,7 @@ i.fa.fa-bell.fa-stack-1x:hover  {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
+    height: 55px;
 }
 #logofps .company {
     margin-left: 10px;
@@ -560,7 +562,7 @@ i.fa.fa-bell.fa-stack-1x:hover  {
 }
 ul.sidebar-nav.list-unstyled {
     overflow-y: auto;
-    height: calc(100vh - 287px);
+    height: calc(100vh - 296px);
 }
 hr {
     margin-top: 0px;
@@ -581,4 +583,7 @@ ol, ul {
 #closeleftmenu {
     padding: 0px 20px !important;
     padding-top: 20px !important;
+}
+#sidebar-wrapper {
+    margin-top: 20px !important;
 }
