--- a/fps/styles.css
+++ b/fps/styles.css
@@ -120,6 +120,9 @@ li.list-group-item {
     display: flex;    
 }
 
+.generalTable.rechtenOverzicht {
+    margin-top: 0px !important;
+}
 .menuliparent.closecollapseall a.caretevent{
     padding-top: 0px;
     padding-bottom: 0px;
@@ -129,7 +132,7 @@ li.list-group-item {
     margin-bottom: auto;
 }
 .sidebar-nav {
-    margin-right: 20px;
+    padding-right: 20px;
     margin-top: 20px !important;
 }
 .menuliparent {
@@ -555,15 +558,38 @@ i.fa.fa-bell.fa-stack-1x:hover  {
     min-height: unset !important;
 }
 
-/* NOTE: layout */
-#main {
+/* NOTE: SCROLL BAR & PLAYOUT */
+#main:hover {
     overflow-y: auto;
+    overflow: overlay;
+}
+#main {
+    overflow-y: hidden;
     height: calc(100vh - 250px);
 }
-ul.sidebar-nav.list-unstyled {
+ul.sidebar-nav.list-unstyled:hover {
     overflow-y: auto;
+    overflow: overlay;
+}
+ul.sidebar-nav.list-unstyled {
+    overflow-y: hidden;
     height: calc(100vh - 296px);
 }
+
+::-webkit-scrollbar {
+    width: 16px;
+}
+::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    /* border-radius: 9999px; */
+    background-color: rgba(0, 0, 0, 0.15); 
+}
+::-webkit-scrollbar-track {
+    margin: 0 30px;
+}
+
+
 hr {
     margin-top: 0px;
     margin-bottom: 0px;
