--- a/fps/index.css
+++ b/fps/index.css
@@ -566,6 +566,10 @@ i.fa.fa-bell.fa-stack-1x:hover  {
 }
 
 /* NOTE: SCROLL BAR & PLAYOUT */
+.flex-space-between {
+    display: flex;
+    justify-content: space-between;
+}
 #main:hover {
     overflow-y: auto;
     overflow: overlay;
@@ -596,7 +600,6 @@ ul.sidebar-nav.list-unstyled {
     margin: 0 30px;
 }
 
-
 hr {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -617,3 +620,10 @@ ol, ul {
 #sidebar-wrapper {
     margin-top: 20px !important;
 }
+/* edit row and col of dashboard profile */
+.edit{
+    display: flex;
+  }
+
+/* Rapportages */
+
