--- a/fps/index.css
+++ b/fps/index.css
@@ -180,6 +180,7 @@ i {
 }
 .dashboardBlockHeader h2{
     margin-right: 10px;
+    max-height: unset !important;
 }
 .prioIcon {
     position: inherit; 
