--- a/fps/material-form.css
+++ b/fps/material-form.css
@@ -5,6 +5,13 @@
     margin-bottom: 16px;
 }
 
+.form-field label {
+    padding-top: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin: 0px;
+    text-transform: capitalize !important;
+}
 .form-field__label {
     /* font-size: 0.75rem; */
     font-size: 90%;
@@ -61,7 +68,7 @@
     font-size: 120%;
     margin-top: 30px;
     outline: 0;
-    padding: 0 30px 10px 30px;
+    padding: 0 30px 10px 30px !important;
     width: 100%;
 }
 
