--- a/material form/index.css
+++ b/material form/index.css
@@ -76,14 +76,15 @@ h1 {
 }
 
 .form-field__input,
+.form-field .selectarea,
 .form-field__textarea {
     -webkit-appearance: none;
     -moz-appearance: none;
-    color: rgba(130, 130, 130, 1);
+    /* color: rgba(130, 130, 130, 1); */
     appearance: none;
     background: transparent;
     border: 0;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     display: block;
     /* font-size: 1.2rem; */
     font-size: 120%;
@@ -93,6 +94,7 @@ h1 {
     width: 100%;
 }
 
+.form-field .selectarea:-ms-input-placeholder~.form-field__label,
 .form-field__input:-ms-input-placeholder~.form-field__label,
 .form-field__textarea:-ms-input-placeholder~.form-field__label {
     /* font-size: 1.2rem; */
@@ -100,13 +102,14 @@ h1 {
     transform: translateY(0);
 }
 
+.form-field .selectarea:-moz-placeholder-shown~.form-field__label,
 .form-field__input:-moz-placeholder-shown~.form-field__label,
 .form-field__textarea:-moz-placeholder-shown~.form-field__label {
     /* font-size: 1.2rem; */
     font-size: 120%;
     transform: translateY(0);
 }
-
+.form-field .selectarea:-ms-input-placeholder~.form-field__label,
 .form-field__input:-ms-input-placeholder~.form-field__label,
 .form-field__textarea:-ms-input-placeholder~.form-field__label {
     /* font-size: 1.2rem; */
@@ -114,6 +117,7 @@ h1 {
     transform: translateY(0);
 }
 
+.form-field .selectarea:placeholder-shown~.form-field__label,
 .form-field__input:placeholder-shown~.form-field__label,
 .form-field__textarea:placeholder-shown~.form-field__label {
     /* font-size: 1.2rem; */
@@ -121,6 +125,7 @@ h1 {
     transform: translateY(0);
 }
 
+.form-field .selectarea:focus~.form-field__label,
 .form-field__input:focus~.form-field__label,
 .form-field__textarea:focus~.form-field__label {
     color: rgba(130, 130, 130, 1);
@@ -129,6 +134,7 @@ h1 {
     transform: translateY(-14px);
 }
 
+.form-field .selectarea:focus~.form-field__bar,
 .form-field__input:focus~.form-field__bar,
 .form-field__textarea:focus~.form-field__bar {
     border-bottom: 2px solid #b11adc;
@@ -141,14 +147,35 @@ h1 {
 
 
 /* remove border bottom */
+.no-border .selectarea,
 .no-border input,
 .no-border textarea {
-    border-bottom: 0px solid #999 !important;
+    border-bottom: 0px solid rgba(0, 0, 0, 0.15) !important;
 }
 .no-border .form-field__control {
     border-radius: 8px 8px 8px 8px !important;
 }
 .bg-transparent .form-field__control {
     background: transparent  !important;
-    border: 1px solid rgba(130, 130, 130, 1) !important;
+    border: 1px solid rgba(0, 0, 0, 0.15) !important;
+}
+
+
+
+/* select2 */
+.form-field .select2-selection {
+    height: auto !important;
+    background: transparent  !important;
+    border: 1px solid rgba(0, 0, 0, 0.15) !important;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.form-field .select2-container--default .select2-selection--single .select2-selection__arrow {
+    position: absolute;
+    top: -7px;
+    right: 30px;
+    width: 20px;
+    height: 100%;
 }
