--- a/fps/index.css
+++ b/fps/index.css
@@ -635,5 +635,11 @@ ol, ul {
 
 /* Job modules */
 
+.bg-white {
+    background-color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 
 
