--- a/fps/index.css
+++ b/fps/index.css
@@ -392,8 +392,11 @@ input,
     margin-top: 10px;
     background-color: rgba(240, 240, 240) !important;
 }
+#main .panel-group,
 #main .settingsOverview{
-    margin-top: 0px;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+
 }
 #dashboard {
     margin-top: 0px !important;
@@ -722,8 +725,20 @@ tr.subModuleButton.linked-element{
     background-color: rgba(24, 165, 165, 0.05) !important;
 }
 
-.btn.dropdown-toggle{
+.moduleSub td,
+.moduleBlockHeader.roundBorders {
+    display: flex !important;
+    align-items: center!important;
+}
+.moduleSub td span:first-child,
+.moduleBlockHeader.roundBorders .title-job-module {
+    flex-grow: 1 !important;
+}
+
+.generalTableItemModule.moduleJobs .btn.dropdown-toggle,
+.moduleSub td .btn.dropdown-toggle,
+.moduleBlockHeader.roundBorders .btn.dropdown-toggle {
     background-color: unset !important;
-    border-radius: 8px !important;
     color: unset !important;
 }
+
