--- a/fps/material-form.css
+++ b/fps/material-form.css
@@ -1,4 +1,5 @@
 
+
 /* Actual code example */
 .form-field {
     display: block;
@@ -11,6 +12,7 @@
     padding-left: 30px;
     margin: 0px;
     text-transform: capitalize !important;
+    font-family: 'Poppins', sans-serif;
 }
 .form-field__label {
     /* font-size: 0.75rem; */
@@ -55,7 +57,9 @@
 }
 
 .form-field__input,
+.form-field .select2,
 .form-field__textarea {
+    min-height: 35px;
     -webkit-appearance: none;
     -moz-appearance: none;
     /* color: rgba(130, 130, 130, 1); */
@@ -72,6 +76,7 @@
     width: 100%;
 }
 
+.form-field .select2:-ms-input-placeholder~.form-field__label,
 .form-field__input:-ms-input-placeholder~.form-field__label,
 .form-field__textarea:-ms-input-placeholder~.form-field__label {
     /* font-size: 1.2rem; */
@@ -79,13 +84,14 @@
     transform: translateY(0);
 }
 
+.form-field .select2:-moz-placeholder-shown~.form-field__label,
 .form-field__input:-moz-placeholder-shown~.form-field__label,
 .form-field__textarea:-moz-placeholder-shown~.form-field__label {
     /* font-size: 1.2rem; */
     font-size: 120%;
     transform: translateY(0);
 }
-
+.form-field .select2:-ms-input-placeholder~.form-field__label,
 .form-field__input:-ms-input-placeholder~.form-field__label,
 .form-field__textarea:-ms-input-placeholder~.form-field__label {
     /* font-size: 1.2rem; */
@@ -93,6 +99,7 @@
     transform: translateY(0);
 }
 
+.form-field .select2:placeholder-shown~.form-field__label,
 .form-field__input:placeholder-shown~.form-field__label,
 .form-field__textarea:placeholder-shown~.form-field__label {
     /* font-size: 1.2rem; */
@@ -100,6 +107,7 @@
     transform: translateY(0);
 }
 
+.form-field .select2-container--open~.form-field__label,
 .form-field__input:focus~.form-field__label,
 .form-field__textarea:focus~.form-field__label {
     color: rgba(130, 130, 130, 1);
@@ -108,6 +116,7 @@
     transform: translateY(-14px);
 }
 
+.form-field .select2-container--open~.form-field__bar,
 .form-field__input:focus~.form-field__bar,
 .form-field__textarea:focus~.form-field__bar {
     border-bottom: 2px solid #b11adc;
@@ -120,6 +129,7 @@
 
 
 /* remove border bottom */
+.no-border .select2,
 .no-border input,
 .no-border textarea {
     border-bottom: 0px solid rgba(0, 0, 0, 0.15) !important;
@@ -132,20 +142,287 @@
     border: 1px solid rgba(0, 0, 0, 0.15) !important;
 }
 
-/* select2 */
-.form-field .select2-selection {
-    height: auto !important;
-    background: transparent  !important;
+.cs .select2-container--open.select2-container--default .select2-selection--single,
+.cs .select2-container--open.select2-container--default .select2-selection--multiple,
+.cs .select2-selection.select2-selection--multiple,
+.cs .select2-selection.select2-selection--single {
+    background-color: transparent;
+    border: unset;
+    border-radius: unset;
+    height: unset;
+    
+}
+.cs .select2-selection.select2-selection--single .select2-selection__rendered {
+    padding-left: unset;
+    line-height: 150%;
+}
+.cs .select2-selection.select2-selection--single .select2-selection__arrow {
+    top: -10px;
+    right: 20px;
+}
+.select2-container.select2-container--default.select2-container--open {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+}
+span.select2-dropdown.select2-dropdown--below {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
     border: 1px solid rgba(0, 0, 0, 0.15) !important;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
 }
-.form-field .select2-container--default .select2-selection--single .select2-selection__arrow {
-    position: absolute;
-    top: -7px;
-    right: 30px;
-    width: 20px;
-    height: 100%;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  :focus {
+    outline: none;
+  }
+  
+  :disabled {
+    background-color: transparent;
+  }
+  
+  /**
+   * Multiple Select2
+   */
+  .select2-container--material {
+    width: 100% !important;
+    /**
+     * Textbox
+     */
+    /**
+     * Dropdown
+     */
+    /**
+     * Options
+     */
+    /**
+     * Focused textbox
+     */
+    /**
+     * Disabled textbox
+     */
+  }
+  .select2-container--material ::-moz-placeholder {
+    color: inherit;
+  }
+  .select2-container--material :-ms-input-placeholder {
+    color: inherit;
+  }
+  .select2-container--material ::placeholder {
+    color: inherit;
+  }
+  .select2-container--material .select2-selection {
+    /* @extend input */
+    overflow: visible;
+    font: inherit;
+    touch-action: manipulation;
+    margin: 0;
+    line-height: inherit;
+    border-radius: 0;
+    box-sizing: inherit;
+    /* @extend .form-control */
+    display: block;
+    width: 100%;
+    color: #55595c;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    padding: 0.5rem 0 0.6rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    background-color: transparent;
+    background-image: none;
+    border-radius: 0;
+    margin-top: 0.2rem;
+    margin-bottom: 1rem;
+    /* @extend input[type=text] */
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    border-radius: 0;
+    outline: 0;
+    width: 100%;
+    font-size: 1rem;
+    box-shadow: none;
+    transition: all 0.3s;
+    min-height: 2.1rem;
+    font-family: 'Poppins', sans-serif;
+  }
+  .select2-container--material .select2-selection .select2-selection__rendered {
+    padding-left: 0;
+  }
+  .select2-container--material .select2-selection--single .select2-selection__rendered {
+    float: left;
+  }
+  .select2-container--material .select2-selection--single .select2-selection__arrow {
+    float: right;
+  }
+  .select2-container--material .select2-selection--multiple {
+    /**
+     * Multiple selected options
+     */
+    /**
+     * Multiple selected option clear button
+     */
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__rendered {
+    width: 100%;
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__rendered li {
+    list-style: none;
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__choice {
+    /* @extend .mdl-chip */
+    height: 32px;
+    line-height: 32px;
+    padding: 0 12px;
+    border: 0;
+    border-radius: 16px;
+    background-color: #dedede;
+    display: inline-block;
+    color: rgba(0, 0, 0, 0.87);
+    margin: 2px 0;
+    font-size: 0;
+    white-space: nowrap;
+    /* @extend .mdl-chip__text */
+    font-size: 13px;
+    vertical-align: middle;
+    display: inline-block;
+    float: left;
+    margin-right: 8px;
+    margin-bottom: 4px;
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__choice__remove {
+    /* Hide default content */
+    font-size: 0;
+    opacity: 0.38;
+    cursor: pointer;
+    float: right;
+    margin-top: 4px;
+    margin-right: -6px;
+    margin-left: 6px;
+    transition: opacity;
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__choice__remove::before {
+    content: "cancel";
+    /* @extend .material-icons */
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: "liga";
+    -webkit-font-smoothing: antialiased;
+    color: #000;
+  }
+  .select2-container--material .select2-selection--multiple .select2-selection__choice__remove:hover {
+    opacity: 0.54;
+  }
+  .select2-container--material .select2-search--inline .select2-search__field {
+    width: 100%;
+    margin-top: 0;
+    /* Match input[type=text] */
+    height: 34px;
+    line-height: 1;
+  }
+  .select2-container--material .select2-dropdown {
+    border: 0;
+  }
+  .select2-container--material .select2-dropdown .select2-search__field {
+    min-height: 2.1rem;
+    margin-bottom: 16px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    transition: all 0.3s;
+  }
+  .select2-container--material .select2-dropdown .select2-search__field:focus {
+    border-bottom: 1px solid #4285f4;
+    box-shadow: 0 1px 0 0 #4585f4;
+  }
+  .select2-container--material .select2-results__options {
+    /* @extend .zf-shadow-depth* */
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    /* @extend .dropdown-content */
+    background-color: #fff;
+    margin: 0;
+    min-width: 100px;
+    max-height: 650px;
+    overflow-y: auto;
+    z-index: 999;
+    will-change: width, height;
+    /* @extend .dropdown-content inline styles */
+  }
+  .select2-container--material .select2-results__option {
+    /* @extend .dropdown-content li */
+    cursor: pointer;
+    clear: both;
+    color: rgba(0, 0, 0, 0.87);
+    line-height: 1.5rem;
+    text-align: left;
+    text-transform: none;
+    /* @extend .dropdown-content li>a, .dropdown-content li>span */
+    font-size: 1.2rem;
+    display: block;
+    padding: 1rem;
+    /**
+     * Disabled options
+     */
+    /**
+     * Selected option
+     */
+    /**
+     * Active/hovered option
+     */
+  }
+  .select2-container--material .select2-results__option[aria-disabled=true] {
+    /* @extend .select-dropdown li.disabled */
+    color: rgba(0, 0, 0, 0.3);
+    background-color: transparent !important;
+    cursor: context-menu;
+    /* @extend .disabled */
+    cursor: not-allowed;
+  }
+  .select2-container--material .select2-results__option[aria-selected=true] {
+    /* @extend .dropdown-content li:active, .dropdow-content li:hover */
+    color: #4285f4;
+    background-color: #eee;
+  }
+  .select2-container--material .select2-results__option--highlighted[aria-selected] {
+    background-color: #ddd;
+  }
+  .select2-container--material.select2-container--focus .select2-selection {
+    /* @extend input[type=text]:focus */
+    border-bottom: 1px solid #4285f4;
+    box-shadow: 0 1px 0 0 #4585f4;
+  }
+  .select2-container--material.select2-container--disabled .select2-selection {
+    /* @extend .select-wrapper input.select-dropdown:disabled */
+    color: rgba(0, 0, 0, 0.3);
+    cursor: default;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .select2-container--material.select2-container--disabled.select2-container--focus .select2-selection {
+    box-shadow: none;
+  }
