--- a/fps/index.css
+++ b/fps/index.css
@@ -744,3 +744,6 @@ tr.subModuleButton.linked-element{
 .submitButtons div.textCenter{
     width: 100% !important;
 }
+.generalTable  {
+    border-radius: 12px;
+}
